--- a/agents/orchestratoragent/pyproject.toml
+++ b/agents/orchestratoragent/pyproject.toml
@@ -11,7 +11,10 @@ dependencies = [
     "google-cloud-logging~=3.11.4",
     "google-cloud-aiplatform[evaluation]~=1.95.1",
     "fastapi~=0.115.8",
-    "uvicorn~=0.34.0"
+    "uvicorn~=0.34.0",
+    "python-dotenv",
+    "requests",
+    "tavily-python"
 ]
 
 requires-python = ">=3.10,<3.14"
