--- a/agents/orchestratoragent/Makefile
+++ b/agents/orchestratoragent/Makefile
@@ -1,3 +1,7 @@
+# This line tells make to load variables from the .env file.
+# The hyphen '-' prevents an error if the file doesn't exist yet.
+-include .env
+
 install:
 	@command -v uv >/dev/null 2>&1 || { echo "uv is not installed. Installing uv..."; curl -LsSf https://astral.sh/uv/0.6.12/install.sh | sh; . ~/.bashrc; }
 	uv sync --dev --extra jupyter --frozen
@@ -18,14 +22,14 @@ playground:
 backend:
 	PROJECT_ID=$$(gcloud config get-value project) && \
 	gcloud run deploy orchestratoragent \
-		--. . \
+		--source . \
 		--memory "4Gi" \
 		--project $$PROJECT_ID \
 		--region "africa-south1" \
 		--no-allow-unauthenticated \
 		--labels "created-by=adk" \
 		--set-env-vars \
-		"COMMIT_SHA=$(shell git rev-parse HEAD)"
+		"COMMIT_SHA=$(shell git rev-parse HEAD),TAVILY_API_KEY=$(TAVILY_API_KEY),WEB_SEARCH_AGENT_URL=$(WEB_SEARCH_AGENT_URL)"
 
 local-backend:
 	uv run uvicorn app.server:app --host 0.0.0.0 --port 8000 --reload
