WIP: debug prompt leakage

--- a/agents/websearchagent/Makefile
+++ b/agents/websearchagent/Makefile
@@ -15,7 +15,7 @@ playground:
 	@echo "|                                                                             |"
 	@echo "| 🔍 IMPORTANT: Select the 'app' folder to interact with your agent.          |"
 	@echo "==============================================================================="
-	uv run adk web --port 8501
+	uv run adk web --host 0.0.0.0 --port 8501
 
 backend:
 	PROJECT_ID=$$(gcloud config get-value project) && \
