--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,8 @@ services:
     depends_on:
       - db
       - broker
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
 # Celery Worker Service
   celery_worker:
@@ -66,6 +68,8 @@ services:
     depends_on:
       - db
       - broker
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
 volumes:
   postgres_data:
