--- a/pytest.ini
+++ b/pytest.ini
@@ -3,3 +3,7 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = frisque_core.settings
 python_files = tests.py test_*.py *_tests.py
+
+# Add this line to tell pytest which directories to ignore
+# We include defaults like .git and add our 'agents' folder.
+norecursedirs = .git .* *.egg* venv agents
