add result page and test

--- a/agents/orchestratoragent/Makefile
+++ b/agents/orchestratoragent/Makefile
@@ -29,7 +29,7 @@ backend:
 		--no-allow-unauthenticated \
 		--labels "created-by=adk" \
 		--set-env-vars \
-		"COMMIT_SHA=$(shell git rev-parse HEAD),TAVILY_API_KEY=$(TAVILY_API_KEY),WEB_SEARCH_AGENT_URL=$(WEB_SEARCH_AGENT_URL)"
+		"COMMIT_SHA=$(shell git rev-parse HEAD),TAVILY_API_KEY=$(TAVILY_API_KEY),WEB_SEARCH_AGENT_URL=$(WEB_SEARCH_AGENT_URL),JSON_FORMATTING_AGENT_URL=$(JSON_FORMATTING_AGENT_URL)"
 
 local-backend:
 	uv run uvicorn app.server:app --host 0.0.0.0 --port 8000 --reload
